box alignment fixed

--- a/JS/Assignments/FirstProject/style.css
+++ b/JS/Assignments/FirstProject/style.css
@@ -38,8 +38,3 @@ li {
   padding: 1rem;
   border: 1px solid #ccc;
 }
-
-.box-alignment {
-  position: inherit;
-  margin: 0;
-}
